# git-quick

./: .gitignore  AI_SETUP.md  CONTRIBUTING.md  DISTRIBUTION_SUMMARY.md  DOCUMENTATION_STRUCTURE.md  INSTALL.sh  Makefile  NEW_CLI_STRUCTURE.md  PUBLISHING.md  PUBLISHING_SETUP.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_OPTIONS.md  RELEASE_WORKFLOW.md  UNIFIED_CLI_SUMMARY.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  publish-manual.yml  publish-on-tag.yml  publish.yml  test.yml
Formula/: git-quick.rb
docs/: AI_INTEGRATION.md  FIRST_RUN_EXPERIENCE.md  INSTALLATION.md  QUICK_REFERENCE.md  README.md  SETUP.md  USAGE.md
docs/development/: DISTRIBUTION_SUMMARY.md  NEW_CLI_STRUCTURE.md  PROJECT_SUMMARY.md  PUBLISHING.md  UNIFIED_CLI_SUMMARY.md
docs/setup/: AI_SETUP.md  CONFIGURATION_GUIDE.md  SETUP_WIZARD_IMPROVEMENTS.md
examples/: config_examples.toml  example_workflow.sh
git_quick/: __init__.py  ai_commit.py  cli.py  config.py
scripts/: bump-version.sh  postinstall.js
tests/: __init__.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
